back/k8s/prod_app_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "canine-ingress-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    env: prod
  name: canine-app
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: canine-app
    env: prod
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canine-app
    env: prod
  name: canine-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canine-app
      env: prod
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: canine-app
        env: prod
      name: app
    spec:
      containers:
        - args:
            - api
          image: europe-west9-docker.pkg.dev/prj-c-k9app-cicd-rv1i/prj-c-k9app-cicd-rv1i-app-k9-image-repo/image-canine-20240507105627/app:4906c0b-dirty@sha256:ecebbea60ec50a8bd83902ceb36812a7a09896780e5794771910c411d7589292
          name: app
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 1
          resources:
            limits:
              cpu: 20m
              memory: 200Mi
      serviceAccountName: canine-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ingress-ip
  labels:
    env: prod
  name: canine-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: canine-app
                port:
                  number: 80
            path: /api/v1/*
            pathType: ImplementationSpecific
